# HLQuantum

./: .gitignore  404.html  LICENSE  NOTICE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pyvenv.cfg  requirements-docs.txt  requirements.txt  sitemap.xml
.github/workflows/: docs.yml
api/algorithms/: index.html
api/backends/: index.html
api/core/: index.html
api/layers/: index.html
api/mitigation/: index.html
api/transpiler/: index.html
api/workflows/: index.html
backends/braket/: index.html
backends/cirq/: index.html
backends/cudaq/: index.html
backends/ionq/: index.html
backends/pennylane/: index.html
backends/qiskit/: index.html
docs/: examples.md  gpu.md  index.md  mcp.md
docs/api/: algorithms.md  backends.md  core.md  layers.md  mitigation.md  transpiler.md  workflows.md
docs/backends/: braket.md  cirq.md  cudaq.md  ionq.md  pennylane.md  qiskit.md
examples/: advanced_algorithms_demo.py  advanced_features_demo.py  complex_system_demo.py  cudaq_gpu_demo.py  hybrid_workflow_demo.py  index.html  ionq_demo.py  mcp_qiskit_server_demo.py  parallel_algorithms_demo.py  parameter_shift_demo.py  qml_demo.py  resilient_workflow_demo.py  state_machine_loop_demo.py
gpu/: index.html
hlquantum/: __init__.py  circuit.py  dynamics.py  exceptions.py  gpu.py  kernel.py  mitigation.py  operators.py  result.py  runner.py  transpiler.py
hlquantum/algorithms/: __init__.py  amplitude_estimation.py  arithmetic.py  bernstein_vazirani.py  deutsch_jozsa.py  gqe.py  grad.py  grover.py  phase_estimation.py  qaoa.py  qft.py  vqe.py
hlquantum/backends/: __init__.py  base.py  braket_backend.py  cirq_backend.py  cudaq_backend.py  ionq_backend.py  pennylane_backend.py  qiskit_backend.py
hlquantum/layers/: __init__.py  attention.py  base.py  core.py  functional.py  templates.py
hlquantum/mcp/: __init__.py  __main__.py  server.py
hlquantum/ml/: __init__.py  clustering.py
hlquantum/qml/: keras.py  (+4 more)
mcp/: index.html
search/: search_index.json
tests/: test_advanced.py  test_advanced_features.py  test_algorithms.py  test_circuit.py  test_comprehensive.py  test_dynamics.py  test_gpu.py  test_ionq_backend.py  test_kernel.py  test_mcp.py  test_new_features.py  test_operators.py  test_optimizers.py  test_resilience.py  test_result.py
(+7 files in other folders)
