[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hlquantum"
version = "0.1.1"
description = "HLQuantum (High Level Quantum) — A high-level Python package for working with quantum hardware using CUDA-Q and other backends."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
  {name = "AlinDFerenczi", email = "alindanielferenczi@gmail.com"},
]
dependencies = [
  "numpy",
]

[project.optional-dependencies]
cudaq = [
  # "cudaq",  # Install manually — not always on PyPI
]
qiskit = [
  "qiskit",
  "qiskit-aer",
]
cirq = [
  "cirq",
]
braket = [
  "amazon-braket-sdk",
]
pennylane = [
  "pennylane",
]
all = [
  "qiskit",
  "qiskit-aer",
  "cirq",
  "amazon-braket-sdk",
  "pennylane",
  "scipy",
]
ionq = [
  "qiskit",
  "qiskit-ionq",
]
scipy = [
  "scipy",
]
dev = [
  "pytest",
  "black",
  "isort",
  "mypy",
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings[python]",
]

[tool.hatch.build.targets.wheel]
packages = ["hlquantum"]
